--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow the <a href="Akintunde Family/index.html">link to the page</a>
+        Wait for a moment <a href="Akintunde Family/index.html">link to the page</a>
     </body>
 </html>
