--- a/Akintunde Family/family-tree.html
+++ b/Akintunde Family/family-tree.html
@@ -76,35 +76,35 @@
 
       <div class="tree" id="treeRoot">
         <div class="tree-row">
-          <div class="tree-box" tabindex="0" role="button" data-person="hime" data-page="../childrens/oluwole-akintunde.html" data-children="gen1">
+          <div class="tree-box" tabindex="0" role="button" data-person="hime" data-page="../Akintunde Family/childrens/oluwole-akintunde.html" data-children="gen1">
             <h3>Mr Josiah Oluwole &amp; Mrs Adunni Rebecca Akintunde</h3>
           </div>
         </div>
 
        
           <li>
-            <div class="tree-box" tabindex="0" role="button" data-person="olubowale" data-page="../childrens/olubowale-akintunde.html" data-children="gen1a">
+            <div class="tree-box" tabindex="0" role="button" data-person="olubowale" data-page="../Akintunde Family/childrens/olubowale-akintunde.html" data-children="gen1a">
               <h3>Mr Olubowale Babatunde &amp; Mrs Iyabo Aminat Akintunde</h3>
             </div>
             <ul class="children" id="gen1a" aria-hidden="true">
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="samuel" data-page="../childrens/samuel.html" data-children="gen1a1">
+                <div class="tree-box" tabindex="0" role="button" data-person="samuel" data-page="../Akintunde Family/childrens/samuel.html" data-children="gen1a1">
                   <h3>Samuel Oyindamayo Akintunde.</a></h3></div></li>
 
                                 <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="esther" data-page="../childrens/esther.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="esther" data-page="../Akintunde Family/childrens/esther.html">
                   <h3>Esther Oluwatimileyin Akintunde</h3>
                 </div>
               </li>
 
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="peter" data-page="../childrens/peter.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="peter" data-page="../Akintunde Family/childrens/peter.html">
                   <h3>Peter Iyanuoluwa Akintunde</h3>
                 </div>
               </li>
 
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="paul" data-page="../childrens/paul.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="paul" data-page="../Akintunde Family/childrens/paul.html">
                   <h3>Paul Olushola Akintunde</h3>
                 </div>
               </li>
@@ -116,28 +116,28 @@
           </li>
 
           <li>
-            <div class="tree-box" tabindex="0" role="button" data-person="sadiku" data-page="../childrens/mr-sadiku.html" data-children="gen1b">
+            <div class="tree-box" tabindex="0" role="button" data-person="sadiku" data-page="../Akintunde Family/childrens/mr-sadiku.html" data-children="gen1b">
               <h3>Mr Ibrahim Sadiku &amp; Mrs Iyabo Sadiku</h3>
             </div>
 
             <ul class="children" id="gen1b" aria-hidden="true">
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="ahmed" data-page="../childrens/ahmed.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="ahmed" data-page="../Akintunde Family/childrens/ahmed.html">
                   <h3>Ahmed Babatunde Sadiku</h3>
                 </div>
               </li>
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="hakeem" data-page="../childrens/hakeem.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="hakeem" data-page="../Akintunde Family/childrens/hakeem.html">
                   <h3>Hakeem Damola Sadiku</h3>
                 </div>
               </li>
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="lukman" data-page="../childrens/lukman.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="lukman" data-page="../Akintunde Family/childrens/lukman.html">
                   <h3>Lukman Johnson Sadiku</h3>
                 </div>
               </li>
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="amina" data-page="../childrens/amina.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="amina" data-page="../Akintunde Family/childrens/amina.html">
                   <h3>Amina Aramide Sadiku</h3>
                 </div>
               </li>
@@ -145,28 +145,28 @@
           </li>
 
           <li>
-            <div class="tree-box" tabindex="0" role="button" data-person="yemi" data-page="../childrens/yemi-akintunde.html" data-children="gen1c">
+            <div class="tree-box" tabindex="0" role="button" data-person="yemi" data-page="../Akintunde Family/childrens/yemi-akintunde.html" data-children="gen1c">
               <h3>Mr Yemi Akintunde &amp; Mrs Folashade Akintunde</h3>
             </div>
 
             <ul class="children" id="gen1c" aria-hidden="true">
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="covenant" data-page="../childrens/covenant-akintunde.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="covenant" data-page="../Akintunde Family/childrens/covenant-akintunde.html">
                   <h3>Covenant Oluwatimilehin Akintunde</h3>
                 </div>
               </li>
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="heritage" data-page="../childrens/heritage-akintunde.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="heritage" data-page="../Akintunde Family/childrens/heritage-akintunde.html">
                   <h3>Heritage Adetayo Akintunde</h3>
                 </div>
               </li>
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="amazing" data-page="../childrens/amazing-akintunde.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="amazing" data-page="../Akintunde Family/childrens/amazing-akintunde.html">
                   <h3>Amazing Adekola Akintunde</h3>
                 </div>
               </li>
               <li>
-                <div class="tree-box" tabindex="0" role="button" data-person="mercy" data-page="../childrens/mercy-akintunde.html">
+                <div class="tree-box" tabindex="0" role="button" data-person="mercy" data-page="../Akintunde Family/childrens/mercy-akintunde.html">
                   <h3>Mercy Modesayo Akintunde</h3>
                 </div>
               </li>
@@ -174,40 +174,40 @@
           </li>
 
           <li>
-            <div class="tree-box" tabindex="0" role="button" data-person="raji" data-page="../childrens/raji-family.html" data-children="gen1d">
+            <div class="tree-box" tabindex="0" role="button" data-person="raji" data-page="../Akintunde Family/childrens/raji-family.html" data-children="gen1d">
               <h3>Mr Raji &amp; Mrs Temitope Raji</h3>
             </div>
 
             <ul class="children" id="gen1d" aria-hidden="true">
-              <li><div class="tree-box" tabindex="0" role="button" data-person="esther-raji" data-page="../childrens/esther-raji.html"><h3>Esther Raji</h3></div></li>
-              <li><div class="tree-box" tabindex="0" role="button" data-person="joshua-raji" data-page="../childrens/joshua-raji.html"><h3>Joshua Raji</h3></div></li>
-              <li><div class="tree-box" tabindex="0" role="button" data-person="emmanuel-raji" data-page="../childrens/emmanuel-raji.html"><h3>Emmanuel Raji</h3></div></li>
-              <li><div class="tree-box" tabindex="0" role="button" data-person="david-raji" data-page="../childrens/david-raji.html"><h3>David Raji</h3></div></li>
-              <li><div class="tree-box" tabindex="0" role="button" data-person="deborah-raji" data-page="../childrens/deborah-raji.html"><h3>Deborah Raji</h3></div></li>
-              <li><div class="tree-box" tabindex="0" role="button" data-person="suprise-raji" data-page="../childrens/suprise-raji.html"><h3>Suprise Raji</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="esther-raji" data-page="../Akintunde Family/childrens/esther-raji.html"><h3>Esther Raji</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="joshua-raji" data-page="../Akintunde Family/childrens/joshua-raji.html"><h3>Joshua Raji</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="emmanuel-raji" data-page="../Akintunde Family/childrens/emmanuel-raji.html"><h3>Emmanuel Raji</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="david-raji" data-page="../Akintunde Family/childrens/david-raji.html"><h3>David Raji</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="deborah-raji" data-page="../Akintunde Family/childrens/deborah-raji.html"><h3>Deborah Raji</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="suprise-raji" data-page="../Akintunde Family/childrens/suprise-raji.html"><h3>Suprise Raji</h3></div></li>
             </ul>
           </li>
 
           <li>
-            <div class="tree-box" tabindex="0" role="button" data-person="ayo" data-page="../childrens/ayo-akintunde.html" data-children="gen1e">
+            <div class="tree-box" tabindex="0" role="button" data-person="ayo" data-page="../Akintunde Family/childrens/ayo-akintunde.html" data-children="gen1e">
               <h3>Mr Daniel Ayoola Akintunde &amp; Mrs Omotorera Akintunde</h3>
             </div>
 
             <ul class="children" id="gen1e" aria-hidden="true">
-              <li><div class="tree-box" tabindex="0" role="button" data-person="ololade" data-page="../childrens/ololade-akintunde.html"><h3>Ololade Akintunde</h3></div></li>
-              <li><div class="tree-box" tabindex="0" role="button" data-person="korede" data-page="../childrens/korede-akintunde.html"><h3>Korede Akintunde</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="ololade" data-page="../Akintunde Family/childrens/ololade-akintunde.html"><h3>Ololade Akintunde</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="korede" data-page="../Akintunde Family/childrens/korede-akintunde.html"><h3>Korede Akintunde</h3></div></li>
             </ul>
           </li>
 
           <li>
-            <div class="tree-box" tabindex="0" role="button" data-person="idiaghe" data-page="../childrens/shola-gbademu.html" data-children="gen1f">
+            <div class="tree-box" tabindex="0" role="button" data-person="idiaghe" data-page="../Akintunde Family/childrens/shola-gbademu.html" data-children="gen1f">
               <h3>Mr Emmanue Idiaghe &amp; Mrs Yemisi Idiaghe</h3>
             </div>
 
             <ul class="children" id="gen1f" aria-hidden="true">
-              <li><div class="tree-box" tabindex="0" role="button" data-person="emmanuella" data-page="../childrens/emmanuella-gbademu.html"><h3>Emmanuella Idiaghe</h3></div></li>
-              <li><div class="tree-box" tabindex="0" role="button" data-person="derrick" data-page="../childrens/david-gbademu.html"><h3>Derrick Idiaghe</h3></div></li>
-              <li><div class="tree-box" tabindex="0" role="button" data-person="ola" data-page="../childrens/ola-gbademu.html"><h3>Ola Idiaghe</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="emmanuella" data-page="../Akintunde Family/childrens/emmanuella-gbademu.html"><h3>Emmanuella Idiaghe</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="derrick" data-page="../Akintunde Family/childrens/david-gbademu.html"><h3>Derrick Idiaghe</h3></div></li>
+              <li><div class="tree-box" tabindex="0" role="button" data-person="ola" data-page="../Akintunde Family/childrens/ola-gbademu.html"><h3>Ola Idiaghe</h3></div></li>
             </ul>
           </li>
 
