--- a/Akintunde Family/gallery.html
+++ b/Akintunde Family/gallery.html
@@ -143,7 +143,7 @@
         </div>
         <div id="about-founders" class="about-panel">
           <strong>Founding Couple</strong> • Pillars of love, faith and community.
-          <a href="../childrens/oluwole-akintunde.html">Visit their page</a>
+          <a href="../Akintunde Family/childrens/oluwole-akintunde.html">Visit their page</a>
         </div>
         <div id="children-founders" class="children">
           <figure class="member"><img src="../Akintunde Family/assets/images/mr and mrs olubowale babatunde.jpeg" alt="">Olubowale & Iyabo  </figure>
