--- a/Akintunde Family/childrens/olubowale-akintunde.html
+++ b/Akintunde Family/childrens/olubowale-akintunde.html
@@ -136,7 +136,7 @@
 </head>
 <body>
   <header>
-    <h1>Mr. and Mrs. Olubowale Akintunde</h1>
+    <h1>Pst. and Pst Mrs. Olubowale Akintunde</h1>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
         <nav id="navMenu">
       <a href="../htmls/index.html">Home</a>
@@ -149,7 +149,7 @@
   </header>
 
   <main>
-    <h1>Mr. Olubowale Babatunde Akintunde & Mrs. Iyabo Aminat Akintunde</h1>
+    <h1>Pst. Olubowale Babatunde Akintunde & Pst Mrs. Iyabo Aminat Akintunde</h1>
 
     <div class="photos">
       <img src="../assets/images/mr olubowale babtunde akintunde.jpeg" alt="Mr. Olubowale Babatunde Akintunde" />
@@ -157,11 +157,16 @@
     </div>
 
     <div class="bio">
-      <p><strong>Mr. Olubowale Babatunde Akintunde</strong>, aged 54, is a man of wisdom, strength, and quiet leadership. His dedication to family and community has made him a pillar of support and guidance. With a calm demeanor and a heart full of compassion, he continues to inspire those around him with his integrity and perseverance.</p>
+      <p><strong>Pst. Olubowale Babatunde Akintunde</strong>, aged 54, is a man of wisdom, strength, and quiet leadership. His dedication to family and community has made him a pillar of support and guidance. With a calm demeanor and a heart full of compassion, he continues to inspire those around him with his integrity and perseverance.</p>
 
+      <p><strong>Pst. Olubowale Babatunde Akintunde</strong>, is an Associate Pastor of 'The Church of Living Water' Ijoko Ogun State  
+
+<p>"An exceptionally devoted servant of the Most High God, an extraordinarily loving and caring father, and a truly inspirational guiding light in our community. [Pst Olubowale Babatunde Akintunde] epitomizes unparalleled compassion, unwavering wisdom, and unrelenting kindness, inspiring us all to live with profound faith, unshakeable hope, and unconditional love, leaving an indelible mark on all who know him."
+</p>
+        
       <p><strong>Mrs. Iyabo Aminat Akintunde</strong>, aged 50, is the heartbeat of their home. Her nurturing spirit, resilience, and unwavering love have shaped the lives of their children and strengthened the bonds of their extended family. She is admired for her grace, hospitality, and deep-rooted values that reflect the richness of her heritage.</p>
 
-      <p>Together, Mr. and Mrs. Akintunde embody the essence of partnership and unity. Their journey is a testament to enduring love, mutual respect, and the power of family. They continue to build a legacy of warmth, wisdom, and togetherness that will be cherished for generations to come.</p>
+      <p>Together, Pst. and Pst Mrs. Akintunde embody the essence of partnership and unity. Their journey is a testament to enduring love, mutual respect, and the power of family. They continue to build a legacy of warmth, wisdom, and togetherness that will be cherished for generations to come.</p>
     </div>
   </main>
 
