--- a/Akintunde Family/gallery.html
+++ b/Akintunde Family/gallery.html
@@ -205,7 +205,7 @@
         </div>
         <div id="about-yemi" class="about-panel">
           Spiritual leaders • Parents to Covenant, Heritage, Amazing & Mercy.
-          <a href="../Akintunde Family/childrens/mr yemi.html">Visit page</a>
+          <a href="../Akintunde Family/childrens/mr-yemi.html">Visit page</a>
         </div>
         <div id="children-yemi" class="children">
           <figure class="member"><img src="../Akintunde Family/assets/images/covenant.jpg" alt=""><figcaption>Covenant</figcaption></figure>
