--- a/Akintunde Family/childrens/mr-yemi.html
+++ b/Akintunde Family/childrens/mr-yemi.html
@@ -153,7 +153,7 @@
 
     <div class="photos">
       <img src="../assets/images/mr and mrs yemi akintunde.jpg" alt="Pst. Oluyemi Emmanuel Akintunde" />
-      <img src="../assets/images/mr yemi akintunde.jpg" alt="Mrs. Iyabo Aminat Akintunde" />
+      <img src="../assets/images/mr yemi akintunde.jpg" alt="Pst Mrs. Folashade Akintunde" />
       
     </div>
 
@@ -181,3 +181,4 @@ He carries an unusual grace and favour. It's sure he carries the Aura of God's P
   </script>
 </body>
 </html>
+
